lintian (2.5.10) UNRELEASED; urgency=low

  * collection/java-info{,.desc}:
    + [NT] Use Archive::Zip instead of zipinfo + unzip to
      extract information from Jar files.
    + [NT] Limit java-info to files classified as "Zip Archive"
      by file(1).

  * debian/control:
    + [NT] Add (Build-)Dependency on libarchive-zip-perl.
    + [NT] Remove runtime dependency on unzip (replaced by
      libarchive-zip-perl).

  * frontend/lintian:
    + [NT] Check if some collections can be skipped for existing
      entries.  This is mostly useful for static labs, where
      certain checks can be now be rerun without having to run
      "unpacked".

  * lib/Lintian/CollScript.pm:
    + [NT] New file.

 -- Niels Thykier <niels@thykier.net>  Sun, 17 Jun 2012 23:25:06 +0200

lintian (2.5.9) unstable; urgency=low

  * Summary of tag changes:
    + Added:
      - run-parts-cron-filename-contains-illegal-chars
    + Removed:
      - run-parts-cron-filename-contains-full-stop

  * checks/*:
    + [NT] Migrate to new Lintian::Path API.
  * checks/fields:
    + [NT] Also classify lib*-cli-dev as belonging to the section
      cli-mono (rather than libdevel).  Thanks to Chow Loong Jin
      for the report and the patch.  (Closes: #675358)
  * checks/files{,.desc}:
    + [NT] Rename run-parts-cron-filename-contains-full-stop and
      have it catch "+" in the filename as well.  Add reference
      to policy 9.5.1 in the  tag description.
  * checks/init.d:
    + [NT] Use the proper regex for matching package names rather
      than an ad-hoc regex.  Thanks to Thorsten Alteholz for the
      report and suggested patch.  (Closes: #677142)
  * checks/shared-libs:
    + [NT] Reverse order of two subst expressions to prevent
      dev-pkg-without-shlib-symlink false positives.  Thanks to
      Aurelien Jarno, Yves-Alexis Perez and Stephen M. Webb for
      the reports and the patch.
      (Closes: #675826, #677310, #675832)