@@ -2,5 +2,5 @@ Collector-Script: java-info
 Author: Vincent Fourmond <fourmond@debian.org>
 Info: This script extracts information from manifests of JAR files
 Type: binary
-Version: 2
+Version: 3
 Needs-Info: index, file-info, unpacked
