@@ -1,0 +1,9 @@
+Testname: java-class-format
+Type: non-native
+Sequence: 6000
+Version: 1.0-1
+Description: Various checks for Java Class format
+Section: java
+Test-For:
+ incompatible-java-bytecode-format
+ unknown-java-class-version
