@@ -1,0 +1,2 @@
+W: libtest-java: unknown-java-class-version usr/share/java/testa-1.0.jar (org/debian/lintian/TestA.class -> 42)
+X: libtest-java: incompatible-java-bytecode-format Java7 version (Class format: 51)
