@@ -1,0 +1,8 @@
+package org.debian.lintian;
+
+/**
+   A neat empty useless class.
+ */
+public class TestA {
+    // An empty class should do.
+};
