@@ -2,3 +2,6 @@
 
 %:
 	dh $@ --with javahelper
+
+override_jh_build:
+	jh_build --javacopts='-target 1.5' --javacopts='-source 1.5'
