@@ -3,7 +3,7 @@
 	dh $@ --with javahelper
 
 override_jh_build:
-	jh_build
+	jh_build --javacopts='-target 1.5' --javacopts='-source 1.5'
 	unzip testa.jar
 	zip -r codeless.jar META-INF/
 	zip -r manifestless.jar org/
